# hpc-coveralls-testing-sandbox

./: .travis.yml  README.md  hpc-coveralls-testing-sandbox.cabal
test/: Test.hs
