name:                hpc-coveralls-testing-sandbox
version:             0.1.0.0
synopsis:            Dummy project used to test hpc-coveralls installed in a sandbox.
license:             BSD3
license-file:        LICENSE
author:              Guillaume Nargeot
maintainer:          guillaume@nargeot.com
copyright:           (c) 2014 Guillaume Nargeot
category:            Control
build-type:          Simple
cabal-version:       >= 1.8

source-repository head
  type: git
  location: git://github.com/guillaume-nargeot/hpc-coveralls-testing.git

library
  hs-source-dirs:  src
  exposed-modules: Util
  build-depends:   base < 5

test-suite test
  hs-source-dirs: src, test
  type:            exitcode-stdio-1.0
  main-is:         Test.hs
  build-depends:   base, containers, HUnit
  ghc-options:     -Wall
